--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "ethers": "^5.6.9",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-tsparticles": "^2.1.3",
+    "tsparticles": "^2.1.3"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.4",
